--- a/GessNumber/GessNumber.csproj
+++ b/GessNumber/GessNumber.csproj
@@ -111,6 +111,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\GuessingNumber.cs" />
+    <Compile Include="Models\ViewModelGuess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
